prusti-tests/tests/verify/fail/unsupported/unsize.rs
fn main() {
    let _ = vec![1]; //~ ERROR unsizing a pointer or reference value is not supported
}